--- a/index.html
+++ b/index.html
@@ -1,11 +1,144 @@
 <!doctype html>
-	<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>API Geolocalización</title>
-	</head>
-	<body>
-		<h2>Uso de la API Geolocalización</h2>
-		<div id="map"></div>
-	</body>
-	</html>	
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>API Geolocalización</title>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="//maps.googleapis.com/maps/api/js?sensor=true" type="text/javascript"></script>
+	<script src="gmaps.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		$(document).ready(function($) {
+			var	map, latitude, longitude;
+
+			var travel_mode= 'driving';
+
+			function linkMark(e) {
+				map.drawRoute({
+					origin: [latitude, longitude],
+					destination: [e.latLng.lat(), e.latLng.lng()],
+					travelMode: travel_mode,
+					strokeColor: '#000000',
+					strokeOpacity: 0.6, 
+					strokeWeight: 5,
+				});
+
+				latitude = e.latLng.lat();
+				longitude = e.latLng.lng();
+
+				map.addMarker({lat: latitude, lng: longitude});
+				$('#travel_mode').attr("disabled","disabled");
+			};
+
+			function geolocation() {
+				GMaps.geolocate({
+					success: function(position) {
+						latitude = position.coords.latitude;
+						longitude = position.coords.longitude;
+
+						start_latitude = latitude;
+						start_longitude = longitude;
+
+						map = new GMaps({
+							el: '#map',
+							lat: latitude,
+							lng: longitude,
+							click: linkMark,
+							tap: linkMark,
+						});
+
+						map.addMarker({lat: latitude, lng: longitude});
+
+					}, 
+					error: function(error) {
+						alert('Error: ' + error.message);
+					},
+					not_supported: function() {
+						alert('Geolocation not supported');
+					},
+				});
+			};
+
+			geolocation();
+
+			function compact() {
+
+				map.cleanRoute();
+				map.removeMarkers();
+
+        		map.addMarker({lat: start_latitude, lng: start_longitude});
+        		map.addMarker({lat: latitude, lng: longitude});
+
+		        map.drawRoute({
+        		origin: [start_latitude, start_longitude],
+          		destination: [latitude, longitude],
+          		travelMode: travel_mode,
+          		strokeColor: '#000000',
+          		strokeOpacity: 0.6,
+          		strokeWeight: 5
+      			});
+		    };
+
+		    function restart(){
+        		map.cleanRoute();
+        		map.removeMarkers();
+
+        		geolocation();
+
+        		$("#travel_mode").removeAttr("disabled");
+        		travel_mode = "driving";
+     		}
+
+
+		    $('#compact').click(function() {
+		    	compact();
+		    });
+
+		    $('#restart').click(function() {
+		    	restart();
+		    });
+
+		    $("#travel_mode").change(function(){
+        		travel_mode = $(this).val();
+      		});
+  		});
+
+    </script>
+
+    <style>
+
+    	body {
+    		font-family: 'Droid sans', 'Helvetica', Arial, sans-serif; 
+    	}
+
+    	#latlng {
+    		display: block;
+    		margin: 0px;
+    		padding: 7px;
+    		height: 50px;
+    	}
+
+    	#map {
+    		display: block;
+    		margin: 0px;
+    		padding: 0px;
+    		position: absolute;
+    		top: 50px;
+    		left: 0px;
+    		right: 0px;
+    		bottom: 0px;				
+    	}
+
+    </style>
+</head>
+<body>
+	<div id="latlng">
+		<button id="compact">Compact!</button>
+		<select id="travel_mode">
+			<option value="driving">Coche</option>
+			<option value="walking">A pie</option>
+		</select>
+		<button id="restart">Restart!</button>
+	</div>
+	<div id="map"></div>
+</body>
+</html>	
